# ml_zoomcamp_midterm_project

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  QUICKSTART_API.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.sh  test_api.py
docs/: evaluation_criteria.md
notebooks/: notebook.ipynb
src/: predictor.py
